lash-embed/tests/ui/root_tool_provider_is_not_public.stderr
error[E0405]: cannot find trait `ToolProvider` in crate `lash_embed`
 --> tests/ui/root_tool_provider_is_not_public.rs:2:36
  |
2 |     let _: Option<&dyn lash_embed::ToolProvider> = None;
  |                                    ^^^^^^^^^^^^ not found in `lash_embed`
